--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   firebase_core: ^1.2.0
   cloud_firestore: ^2.2.0
   smart_select: ^4.3.2
-  pdf_viewer_jk: ^2.1.0
-  g_captcha: ^1.0.0
+  # pdf_viewer_jk: ^2.1.0
+  # g_captcha: ^1.0.0
   flutter_libphonenumber: ^1.1.0
   flutter_widget_from_html: ^0.6.2
   webview_flutter: ^2.0.12
   infinite_scroll_pagination: ^3.1.0
+  url_launcher: ^6.0.12
+  flutter_cached_pdfview: ^0.4.0-nullsafety
 
 dev_dependencies:
   flutter_test:
@@ -95,8 +97,15 @@ flutter:
     - family: SourceSansPro
       fonts:
         - asset: assets/fonts/SourceSansPro-Regular.ttf
+          weight: 400
         - asset: assets/fonts/SourceSansPro-Bold.ttf
           weight: 700
+    - family: PlayfairDisplay
+      fonts:
+        - asset: assets/fonts/PlayfairDisplay-VariableFont_wght.ttf
+    - family: Lora
+      fonts:
+        - asset: assets/fonts/Lora.ttf
     - family: CusIcons
       fonts:
         - asset: assets/fonts/CusIcons.ttf
