--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   infinite_scroll_pagination: ^3.1.0
   url_launcher: ^6.0.12
   flutter_cached_pdfview: ^0.4.0-nullsafety
+  dio: ^4.0.0
+  permission_handler: ^8.2.5
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
