--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^4.0.0
   permission_handler: ^8.2.5
   path_provider: ^2.0.5
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
