--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.9.0"
+  flutter_native_splash: ^1.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,6 +60,11 @@ flutter_icons:
   image_path: "assets/images/zendy_app_launcher_icon.png"
   android: true
   ios: true
+
+flutter_native_splash:
+  image: assets/images/splash_logo.png
+  color: "ffffff"
+  android_disable_fullscreen: true
 
 # The following section is specific to Flutter.
 flutter:
