--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = zendy
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.zendyMobileApp
+PRODUCT_BUNDLE_IDENTIFIER = com.zendy.reserch
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
