--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: zendy
 description: Your research partner.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -17,7 +17,8 @@ dependencies:
   share: ^2.0.4
   reactive_forms: ^16.0.2
   cupertino_icons: ^1.0.2
-  skeleton_text: ^3.0.0
+  skeleton_text: ^3.0.1
+  # skeleton_text: ^3.0.0
   # cloud_firestore: ^4.8.3
   flutter_libphonenumber: ^2.1.5
   flutter_widget_from_html: ^0.10.3
@@ -33,7 +34,6 @@ dependencies:
   awesome_select: ^6.0.0
   # firebase_core: ^2.15.0
   restart_app: ^1.2.1
-  
 
 
 dev_dependencies:
